# Scalenet

./: .gitignore  Makefile  PLAN.md  README.md
android/: build.gradle  proguard-rules.pro
android/src/androidTest/kotlin/cn/sunnysab/scalenet/: MainActivityTest.kt  TestUtil.kt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  footprint_jni.cpp
android/src/main/java/cn/sunnysab/scalenet/: App.kt  AppSourceChecker.kt  DnsConfig.java  IPNReceiver.java  IPNService.kt  MainActivity.kt  NetworkChangeCallback.kt  QuickToggleService.java  ShareActivity.kt  StartVPNWorker.java  StopVPNWorker.java  TaildropDirectoryStore.kt  UseExitNodeWorker.kt  VPNServiceBuilder.kt
android/src/main/java/cn/sunnysab/scalenet/mdm/: MDMSettings.kt  MDMSettingsChangedReceiver.kt  MDMSettingsDefinitions.kt
android/src/main/java/cn/sunnysab/scalenet/proxy/: FootprintEngine.kt  FootprintLogSink.kt  FootprintNative.kt  FootprintSocketProtector.kt
android/src/main/java/cn/sunnysab/scalenet/ui/: Links.kt
android/src/main/java/cn/sunnysab/scalenet/util/: FeatureFlags.kt  HardwareKeyStore.kt  ShareFileHelper.kt  TSLog.kt
android/src/main/java/com/tailscale/ipn/: App.kt  IPNReceiver.java  IPNService.kt  MainActivity.kt
android/src/main/java/com/tailscale/ipn/proxy/: FootprintEngine.kt  FootprintLogSink.kt  FootprintNative.kt  FootprintSocketProtector.kt
android/src/main/jniLibs/: README.md
android/src/main/res/values/: strings.xml  strings_footprint.xml
libtailscale/: backend.go  interfaces.go  proxy_dial.go  scalenet_localapi.go
(+94 files in other folders)
